--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-streamlit==1.5.1
-numpy==1.22.2
-pandas==1.4.0
-scipy==1.8.0
-plotly==5.6.0
-tmm==0.1.8
-colour-science==0.3.16
+streamlit
+numpy
+panda
+scipy
+plotly
+tmm
+colour-science
