--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-streamlit
-numpy
-panda
-scipy
-plotly
-tmm
-colour-science
+streamlit==1.37.1
+numpy==1.26.4
+pandas==2.2.2
+scipy==1.13.1
+plotly==5.24.1
+tmm==0.2.0
+colour-science=0.4.6
