--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-python==3.12.7
+python==3.9.21
 streamlit==1.37.1
 numpy==1.26.4
 pandas==2.2.2
 scipy==1.13.1
 plotly==5.24.1
 tmm==0.2.0
-colour-science==0.4.6
+colour-science
